--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <style type="text/css">
         .content {
             border-radius: 5px;
-            border: 1px solid grey;
-            margin: 1rem 2rem;
+            border  : 1px solid grey;
+            margin  : 1rem 2rem;
+            padding : 1rem
+        }
+        .content ul {
+            list-style-type: none;
+        }
+        .content ul li {
+            margin-bottom: .5rem;
         }
     </style>
 </head>
@@ -24,7 +31,12 @@
         <h3>Test:</h3>
 
         <ul>
-            <li><a href="./src/html/datatypes-checks_test.html">datatypes checks</a></li>
+            <li>
+                <a href="./src/html/datatypes-checks_test.html">1. datatypes checks</a>
+            </li>
+            <li>
+                <a href="./src/html/asserts_test.html">2. asserts</a>
+            </li>
         </ul>
     </div>
 </body>
