added "checkString()" to datatype-checks.js

--- a/src/html/datatypes-checks_test.html
+++ b/src/html/datatypes-checks_test.html
@@ -125,6 +125,26 @@
             );
         }
 
+        function testCheckString()
+        {
+            let testData = [
+                undefined,
+                null,
+                1,
+                -1,
+                0,
+                '1',
+                '',
+                'ab',
+                {},
+                { "a": "asas" },
+                [],
+                [1, 2]
+            ];
+
+            runAndShowTestResults(checkString, testData, 3);
+        }
+
 
         /***************************************************************
          * Tests
@@ -143,6 +163,9 @@
             testCheckObject();
         }
 
+        if (confirm('Run the test: "testCheckString"?')) {
+            testCheckString();
+        }
     </script>
 </head>
 <body>
