refactor: renamed file

--- a/src/html/asserts_test.html
+++ b/src/html/asserts_test.html
@@ -14,7 +14,7 @@
     -->
 
     <script src='../js/framework.js'></script>
-    <script src='../js/datatype-checks.js'></script>
+    <script src='../js/check-types.js'></script>
     <script src='../js/asserts.js'></script>
 
     <script>
