--- a/src/html/datatypes-checks_test.html
+++ b/src/html/datatypes-checks_test.html
@@ -14,7 +14,7 @@
     -->
 
     <script src='../js/framework.js'></script>
-    <script src='../js/datatype-checks.js'></script>
+    <script src='../js/check-types.js'></script>
 
     <script>
         function testCheckArray()
