--- a/src/html/asserts_test.html
+++ b/src/html/asserts_test.html
@@ -34,6 +34,29 @@
             runAndShowTestResults(assertArray, testData, expectedGreens);
         }
 
+        function testAssertArrayEquals()
+        {
+            const expectedGreens = 4;
+            const resultsNumber = 4;
+            let positiveResults = 0;
+
+            const arr1 = [1, 2, 3, 4, 5];
+            const arr2 = [1, 3, 5, 4, 2];
+            const arr3 = [1, 3, 5];
+
+            assertArrayEquals(arr1, arr2) ? positiveResults++ : 0;
+            assertArrayEquals(arr1, arr2, true) ? 0 : positiveResults++;
+            assertArrayEquals(arr1, arr3) ? 0 : positiveResults++;
+            assertArrayEquals(arr3, arr2) ? 0 : positiveResults++;
+
+            showTestResults(
+                'assertArrayEquals',
+                resultsNumber,
+                positiveResults,
+                expectedGreens
+            )
+        }
+
         function testAssertEmpty()
         {
             const expectedGreens = 3;
@@ -117,6 +140,10 @@
 
         if (confirm('Run the test: "testAssertArray"?')) {
             testAssertArray();
+        }
+
+        if (confirm('Run the test: "testAssertArrayEquals"?')) {
+            testAssertArrayEquals();
         }
 
         if (confirm('Run the test: "testAssertEmpty"?')) {
